--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^11.4.1
   firebase_messaging: ^14.7.3
   app_settings: ^5.1.1
+  onesignal_flutter: ^5.0.3
 
 #flutter_icons:
 #  android: true
