--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:534725597570:ios:888ff328089b45697cd79b",
-  "FIREBASE_PROJECT_ID": "thandridb",
-  "GCM_SENDER_ID": "534725597570"
+  "GOOGLE_APP_ID": "1:799628710184:ios:83ce7eb9f59bc4e9c1801d",
+  "FIREBASE_PROJECT_ID": "thandriusers",
+  "GCM_SENDER_ID": "799628710184"
 }
