--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_messaging: ^14.7.3
   app_settings: ^5.1.1
   onesignal_flutter: ^5.0.3
+  toast: ^0.3.0
   
 
 #flutter_icons:
