--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,10 @@ dependencies:
   app_settings: ^5.1.1
   onesignal_flutter: ^5.0.3
   toast: ^0.3.0
-  audioplayers: ^5.2.0
+  audioplayers: ^5.2.0 
+  just_audio: ^0.9.36
+  
+ 
   
 
 #flutter_icons:
